--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,9 @@
     "stripe": "^16.2.0",
     "uuid": "^10.0.0",
     "valid-url": "^1.0.9"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
