--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,7 @@
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "react-dom": "^18.3.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -38,7 +33,12 @@
     "stripe": "^16.2.0",
     "uuid": "^10.0.0",
     "valid-url": "^1.0.9",
-    "vite": "^5.3.4",
+    "vite": "^5.3.5",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
