--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,6 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
     "express": "^4.19.2",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
@@ -32,13 +27,18 @@
     "nodemon": "^3.1.4",
     "stripe": "^16.2.0",
     "uuid": "^10.0.0",
-    "valid-url": "^1.0.9",
-    "vite": "^5.3.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.3.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7"
   }
 }
